--- a/index.html
+++ b/index.html
@@ -96,3 +96,21 @@
 
 </body>
 </html>
+<section>
+    <h2>Pre-Order Now</h2>
+    https://formspree.io/f/xjkpnayy
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <select name="product" required>
+        <option value="Tracksuit 1">Tracksuit 1</option>
+        <option value="Tracksuit 2">Tracksuit 2</option>
+        <option value="T-Shirt">T-Shirt</option>
+      </select>
+      <textarea name="message" placeholder="Any notes or size?" rows="4"></textarea>
+      
+      <!-- Hidden subject field for Formspree -->
+      <input type="hidden" name="_subject" value="New Pre-Order from House of Pikamu">
+      
+      <button type="submit">Submit Pre-Order</button>
+    </form>
+</section>
