--- a/index.html
+++ b/index.html
@@ -114,3 +114,7 @@
       <button type="submit">Submit Pre-Order</button>
     </form>
 </section>
+<section>
+  <h2>Our Collection</h2>
+  <div class="gallery">
+    <img src="images/thumbnail_IMG_8781.jpg" alttion>
